--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cbioportal-frontend",
   "private": true,
-  "version": "3.3.258",
+  "version": "3.3.228",
   "workspaces": {
     "packages": [
       ".",
@@ -30,17 +30,17 @@
     "buildBootstrap": "sass --style :compressed src/globalStyles/bootstrap-entry.scss src/globalStyles/prefixed-bootstrap.min.css",
     "heroku-postbuild": "yarn run build && yarn add pushstate-server@3.0.1 -g",
     "updateAPI": "yarn run fetchAPI && yarn run buildAPI && yarn run updateOncoKbAPI && yarn run updateGenomeNexusAPI",
-    "fetchAPILocal": "export CBIOPORTAL_URL=http://localhost:8090 && curl -s -L -k ${CBIOPORTAL_URL}/api/api-docs | json | grep -v basePath | grep -v termsOfService | grep -v host > packages/cbioportal-ts-api-client/src/generated/CBioPortalAPI-docs.json && curl -s -L -k ${CBIOPORTAL_URL}/api/api-docs?group=internal | json | grep -v host | grep -v basePath | grep -v termsOfService > packages/cbioportal-ts-api-client/src/generated/CBioPortalAPIInternal-docs.json",
-    "fetchAPI": "./scripts/env_vars.sh && eval \"$(./scripts/env_vars.sh)\" && curl -s -L -k ${CBIOPORTAL_URL}/api/api-docs | json | grep -v basePath | grep -v termsOfService | grep -v host > packages/cbioportal-ts-api-client/src/generated/CBioPortalAPI-docs.json && curl -s -L -k ${CBIOPORTAL_URL}/api/api-docs?group=internal | json | grep -v host | grep -v basePath | grep -v termsOfService > packages/cbioportal-ts-api-client/src/generated/CBioPortalAPIInternal-docs.json",
+    "fetchAPILocal": "export CBIOPORTAL_URL=http://localhost:8090 && curl -L -k ${CBIOPORTAL_URL}/api/api-docs | json | grep -v basePath | grep -v termsOfService | grep -v host > packages/cbioportal-ts-api-client/src/generated/CBioPortalAPI-docs.json && curl -L -k ${CBIOPORTAL_URL}/api/api-docs?group=internal | json | grep -v host | grep -v basePath | grep -v termsOfService > packages/cbioportal-ts-api-client/src/generated/CBioPortalAPIInternal-docs.json",
+    "fetchAPI": "./scripts/env_vars.sh && eval \"$(./scripts/env_vars.sh)\" && curl -L -k ${CBIOPORTAL_URL}/api/api-docs | json | grep -v basePath | grep -v termsOfService | grep -v host > packages/cbioportal-ts-api-client/src/generated/CBioPortalAPI-docs.json && curl -L -k ${CBIOPORTAL_URL}/api/api-docs?group=internal | json | grep -v host | grep -v basePath | grep -v termsOfService > packages/cbioportal-ts-api-client/src/generated/CBioPortalAPIInternal-docs.json",
     "buildAPI": "node scripts/generate-api.js packages/cbioportal-ts-api-client/src/generated CBioPortalAPI CBioPortalAPIInternal",
     "updateOncoKbAPI": "yarn run fetchOncoKbAPI && yarn run buildOncoKbAPI",
-    "fetchOncoKbAPI": "curl -s -k https://www.oncokb.org/api/v1/v2/api-docs?group=Public%20APIs | json | grep -v basePath | grep -v termsOfService | grep -v host > packages/oncokb-ts-api-client/src/generated/OncoKbAPI-docs.json",
+    "fetchOncoKbAPI": "curl -k https://www.oncokb.org/api/v1/v2/api-docs?group=Public%20APIs | json | grep -v basePath | grep -v termsOfService | grep -v host > packages/oncokb-ts-api-client/src/generated/OncoKbAPI-docs.json",
     "buildOncoKbAPI": "node scripts/generate-api.js packages/oncokb-ts-api-client/src/generated OncoKbAPI",
     "updateG2SAPI": "yarn run fetchG2SAPI && yarn run buildG2SAPI",
-    "fetchG2SAPI": "curl -s -k http://g2s.genomenexus.org/v2/api-docs?group=api > packages/genome-nexus-ts-api-client/src/generated/Genome2StructureAPI-docs.json",
+    "fetchG2SAPI": "curl -k http://g2s.genomenexus.org/v2/api-docs?group=api > packages/genome-nexus-ts-api-client/src/generated/Genome2StructureAPI-docs.json",
     "buildG2SAPI": "node scripts/generate-api.js packages/genome-nexus-ts-api-client/src/generated Genome2StructureAPI",
     "updateGenomeNexusAPI": "yarn run fetchGenomeNexusAPI && yarn run buildGenomeNexusAPI",
-    "fetchGenomeNexusAPI": "./scripts/env_vars.sh && eval \"$(./scripts/env_vars.sh)\" && curl -s -k ${GENOME_NEXUS_URL}/v2/api-docs | json | grep -v basePath | grep -v termsOfService | grep -v host > packages/genome-nexus-ts-api-client/src/generated/GenomeNexusAPI-docs.json && curl -s -k ${GENOME_NEXUS_URL}/v2/api-docs?group=internal | json | grep -v basePath | grep -v termsOfService | grep -v host > packages/genome-nexus-ts-api-client/src/generated/GenomeNexusAPIInternal-docs.json",
+    "fetchGenomeNexusAPI": "./scripts/env_vars.sh && eval \"$(./scripts/env_vars.sh)\" && curl -k ${GENOME_NEXUS_URL}/v2/api-docs | json | grep -v basePath | grep -v termsOfService | grep -v host > packages/genome-nexus-ts-api-client/src/generated/GenomeNexusAPI-docs.json && curl -k ${GENOME_NEXUS_URL}/v2/api-docs?group=internal | json | grep -v basePath | grep -v termsOfService | grep -v host > packages/genome-nexus-ts-api-client/src/generated/GenomeNexusAPIInternal-docs.json",
     "buildGenomeNexusAPI": "node scripts/generate-api.js packages/genome-nexus-ts-api-client/src/generated GenomeNexusAPI GenomeNexusAPIInternal",
     "updateHotspotGenes": "./scripts/get_hotspot_genes.sh > src/shared/static-data/hotspotGenes.json",
     "compileOqlParser": "cd src/shared/lib/oql && pegjs oql-parser.pegjs",
@@ -79,7 +79,6 @@
   "author": "",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
-    "3dmol": "^1.3.7",
     "@babel/core": "7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.4.4",
@@ -131,7 +130,6 @@
     "@types/react-sortable-hoc": "^0.6.5",
     "@types/react-spinkit": "^1.1.35",
     "@types/react-table": "^6.8.7",
-    "@types/react-toastify": "^4.1.0",
     "@types/react-transition-group": "^2.0.14",
     "@types/react-virtualized": "^9.18.7",
     "@types/recompose": "^0.20.4",
@@ -141,6 +139,7 @@
     "@types/seedrandom": "2.4.27",
     "@types/sinon": "^4.1.3",
     "@types/superagent": "^2.0.36",
+    "3dmol": "^1.3.7",
     "addthis-snippet": "^1.0.1",
     "autobind-decorator": "^2.1.0",
     "autoprefixer": "^6.7.0",
@@ -155,10 +154,10 @@
     "bootstrap-sass": "3.4.1",
     "bowser": "^1.7.1",
     "bundle-loader": "^0.5.4",
-    "cbioportal-clinical-timeline": "^0.3.69",
-    "cbioportal-frontend-commons": "^0.5.54",
-    "cbioportal-ts-api-client": "^0.9.63",
-    "cbioportal-utils": "^0.3.35",
+    "cbioportal-clinical-timeline": "^0.3.55",
+    "cbioportal-frontend-commons": "^0.5.42",
+    "cbioportal-ts-api-client": "^0.9.51",
+    "cbioportal-utils": "^0.3.28",
     "chart.js": "^2.6.0",
     "classnames": "^2.2.5",
     "clinical-timeline": "0.0.30",
@@ -185,13 +184,12 @@
     "fmin": "^0.0.2",
     "font-awesome": "^4.7.0",
     "fork-ts-checker-webpack-plugin": "^6.3.3",
-    "genome-nexus-ts-api-client": "^1.1.29",
+    "genome-nexus-ts-api-client": "^1.1.24",
     "git-revision-webpack-plugin": "^5.0.0",
     "history": "4.10.1",
     "html-webpack-plugin": "^5.3.2",
     "igv": "^2.11.2",
     "imports-loader": "^0.8.0",
-    "jStat": "^1.7.0",
     "javascript-natural-sort": "^0.7.1",
     "jquery": "3.6.0",
     "jquery-migrate": "3.0.0",
@@ -200,6 +198,7 @@
     "json-fn": "^1.1.1",
     "jsonpath": "^1.1.1",
     "jspdf": "^1.3.3",
+    "jStat": "^1.7.0",
     "jstree": "^3.3.4",
     "jszip": "^3.7.1",
     "lerna": "3.19.0",
@@ -224,14 +223,14 @@
     "mobxpromise": "github:cbioportal/mobxpromise#303db72588860bff0a6862a4f07a4e8a3578c94f",
     "numeral": "^2.0.6",
     "object-sizeof": "^1.2.0",
-    "oncokb-frontend-commons": "^0.0.19",
+    "oncokb-frontend-commons": "^0.0.10",
     "oncokb-styles": "~1.4.2",
     "oncokb-ts-api-client": "^1.3.3",
-    "oncoprintjs": "^6.0.3",
+    "oncoprintjs": "^6.0.1",
     "pako": "2.0.2",
     "parameter-validator": "^1.0.2",
     "path-browserify": "^1.0.1",
-    "pathway-mapper": "^2.3.0",
+    "pathway-mapper": "^2.3.0-beta.3",
     "pdfobject": "^2.0.201604172",
     "pegjs": "^0.10.0",
     "plotly.js": "^1.42.5",
@@ -269,7 +268,7 @@
     "react-markdown": "^7.0.1",
     "react-mfb": "^0.6.0",
     "react-motion": "^0.4.7",
-    "react-mutation-mapper": "^0.8.97",
+    "react-mutation-mapper": "^0.8.79",
     "react-overlays": "0.7.4",
     "react-portal": "^4.2.0",
     "react-rangeslider": "^2.1.0",
@@ -283,9 +282,9 @@
     "react-sortable-hoc": "^1.9.1",
     "react-spinkit": "^3.0.0",
     "react-text-truncate": "^0.9.0",
-    "react-toastify": "^9.1.2",
     "react-tooltip": "^3.2.2",
     "react-transition-group": "^2.5.1",
+    "react-twitter-widgets": "^1.7.1",
     "react-virtualized": "^9.20.1",
     "react-zeroclipboard": "^3.2.2",
     "reactable": "^0.14.1",
@@ -320,7 +319,7 @@
     "styled-components": "^4.2.1",
     "superagent": "^3.8.3",
     "superagent-cache": "^3.0.1",
-    "svg2pdf.js": "github:cbioportal/svg2pdf.js#v1.3.3-cbio-patch-1",
+    "svg2pdf.js": "github:cbioportal/svg2pdf.js#v1.3.3-cbio",
     "svgsaver": "0.9.0",
     "swagger-client": "^3.8.22",
     "ts-loader": "4.0.0",
@@ -337,7 +336,7 @@
     "webpack-cli": "^4.8.0",
     "webpack-raphael": "github:DmitryBaranovskiy/raphael#v2.3.0",
     "word-wrap": "^1.2.3",
-    "xml2js": "^0.5.0"
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.23",
@@ -374,6 +373,5 @@
     "ts-node": "^10.2.1",
     "webpack-dev-server": "^4.1.0",
     "yargs": "^6.6.0"
-  },
-  "packageManager": "yarn@1.22.5"
+  }
 }
